# tokmeter

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: pricing.yaml
docs/superpowers/plans/: 2026-07-07-electricity-cost-accounting.md
docs/superpowers/specs/: 2026-07-07-electricity-cost-accounting-design.md
systemd/: tokmeter.service
tests/: test_cli.py  test_config.py  test_db.py  test_energy.py  test_pricing.py  test_proxy.py  test_report.py  test_report_energy.py  test_smoke.py  test_usage.py  test_writer.py
tokmeter/: cli.py  config.py  db.py  energy.py  pricing.py  proxy.py  report.py  usage.py  writer.py
