[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokmeter"
version = "0.1.0"
description = "Local LLM usage tracker: transparent proxy that logs token usage per model."
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tokmeter = "tokmeter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tokmeter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
