[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokmeter"
version = "0.1.0"
description = "Local LLM usage tracker: transparent proxy that logs token usage per model."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Christopher Douillet" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Utilities",
]
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/cadouille9/tokmeter"
Repository = "https://github.com/cadouille9/tokmeter"
Issues = "https://github.com/cadouille9/tokmeter/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tokmeter = "tokmeter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tokmeter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Starlette 1.3's TestClient prefers the `httpx2` package and warns when it
    # falls back to `httpx` (which the proxy itself depends on). Cosmetic only —
    # silence this one warning instead of pulling a second HTTP stack into deps.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
